# delta-rs-write-profiling

./: .gitignore  .gitmodules  Cargo.toml  README.md  profile.sh
src/: main.rs
