[package]
name = "delta-rs-write-profiling"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = "28.0.0"
deltalake = { version = "0.14.0", features = ["datafusion"] }
env_logger = "0.10.0"
log = "0.4"
tempfile = "3.4.0"
tokio = "1.0"
url = "2.3"

[[bin]]
name = "delta-rs-write-profiling"
path = "src/main.rs"
